Update project version to 2.4.0
- Updated current-version to 2.4.0 in .github/project.yml.
- Updated next-version to 2.4.1-SNAPSHOT in .github/project.yml.